overflow y bug fixed

--- a/css/global.css
+++ b/css/global.css
@@ -29,7 +29,6 @@ body {
   margin: 0px;
   padding: 0px;
   overflow-x: hidden;
-  overflow-y: hidden;
 }
 
 /* NAVIGATION BAR */
